--- a/www/index.html
+++ b/www/index.html
@@ -1,39 +1,93 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <meta name="format-detection" content="telephone=no" />
-        <meta name="msapplication-tap-highlight" content="no" />
-        <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-        <link rel="stylesheet" type="text/css" href="css/index.css" />
-        <link rel="stylesheet" type="text/css" href="css/jquery.mobile.css" />
-        <title>Foobar Webdesign</title>
-    </head>
-    <body>
-        <div class="app">
-            <div data-role="page">
+<head>
+<meta charset="utf-8" />
+<meta name="format-detection" content="telephone=no" />
+<meta name="msapplication-tap-highlight" content="no" />
+<!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
+<meta name="viewport"
+	content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+<link rel="stylesheet" type="text/css" href="css/index.css" />
+<link rel="stylesheet" type="text/css" href="css/jquery.mobile.css" />
+<link rel="stylesheet" type="text/css" href="css/jquery.mobile.theme.css" />
+<title>Foobar Webdesign</title>
+</head>
+<body>
+	<div class="app" >
+		<div data-role="page" id="home">
 
-	<div data-role="header">
-		<h1>Single page</h1>
-	</div><!-- /header -->
+			<header data-role="header">
+				<h1>Single page</h1>
+			</header>
+			<!-- /header -->
 
-	<div data-role="content">	
-		<p>This is a single page boilerplate template that you can copy to build your first jQuery Mobile page. Each link or form from here will pull a new page in via Ajax to support the animated page transitions.</p>		
-		<p>Just view the source and copy the code to get started. All the CSS and JS is linked to the jQuery CDN versions so this is super easy to set up. Remember to include a meta viewport tag in the head to set the zoom level.</p>
-		<p>This template is standard HTML document with a single "page" container inside, unlike a <a href="multipage-template.html" data-ajax="false">multi-page template</a> that has multiple pages within it. We strongly recommend building your site or app as a series of separate pages like this because it's cleaner, more lightweight and works better without JavaScript.</p>
-	</div><!-- /content -->
+			<div data-role="content">
+				<nav data-role="navbar">
+					<ul>
+						<li><a href="#home" class="ui-btn-active">Home</a></li>
+						<li><a href="#about">About</a></li>
+						<li><a href="#contact">Contact</a></li>
+
+
+					</ul>
+
+				</nav>
+
+
+				This is sssss
+			</div>
+			<!-- /content -->
+
+			<div data-role="footer">
+				<h4>Footer content</h4>
+			</div>
+			<!-- /footer -->
+
+		</div>
+		
+			<div data-role="page" id="about">
+
+			<header data-role="header">
+				<h1>Single page</h1>
+			</header>
+			<!-- /header -->
+
+			<div data-role="content">
+				<nav data-role="navbar">
+					<ul>
+						<li><a href="#home">Home</a></li>
+						<li><a href="#about" class="ui-btn-active">About</a></li>
+						<li><a href="#contact">Contact</a></li>
+
+
+					</ul>
+
+				</nav>
+				This is abbbb
+			</div>
+			<!-- /content -->
+
+			<div data-role="footer">
+				<h4>Footer content</h4>
+			</div>
+			<!-- /footer -->
+
+		</div>
+
+	</div>
 	
-	<div data-role="footer">
-		<h4>Footer content</h4>
-	</div><!-- /footer -->
-          
-        </div>
-        <script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript" src="js/jquery.js"></script>
-        <script type="text/javascript" src="js/jquery.mobile.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
-     
-    </body>
+	
+	
+
+	 
+	
+
+	</div>
+	<script type="text/javascript" src="cordova.js"></script>
+	<script type="text/javascript" src="js/jquery.js"></script>
+	<script type="text/javascript" src="js/jquery.mobile.js"></script>
+	<script type="text/javascript" src="js/index.js"></script>
+
+</body>
 </html>
